fixed scrollbar

--- a/src/main/webapp/vue/form.css
+++ b/src/main/webapp/vue/form.css
@@ -1,7 +1,5 @@
 button {
     border-width: 0;
-    background-color: #777;
-    color:#fff;
     padding:0.25rem 0.75rem;
     display: inline-flex;
     cursor: pointer;
@@ -9,9 +7,11 @@ button {
     font-size: 1rem;
 }
 
-button:hover{
-    background-color: #555;
+button.primary{
+    color:#fff;
+    background-color: rgb(150, 14, 36);
 }
+
 
 textarea, input{
     border-width: 0;
@@ -26,3 +26,13 @@ label+input{
     margin-top: 0.25rem;
     margin-bottom: 0.5rem;
 }
+
+textarea{
+    line-height: 2;
+}
+
+/* .board-control-box>button{
+    border-radius: 0;
+    font-size: 0.75rem;
+    padding:0.25rem;
+} */
