--- a/src/main/webapp/vue/style.css
+++ b/src/main/webapp/vue/style.css
@@ -19,10 +19,12 @@ body{
     font-family: "Nanum Gothic";
     color:rgb(20, 6, 6);
     margin: 0;
+    overflow-y: scroll;
 }
 
 header{
     border-bottom: 1px solid #ddd;
+    padding:1rem 0;
 }
 
 a{
@@ -70,6 +72,7 @@ h4{
 
 .h4{
     height: 3.5rem;
+    line-height: 3.5rem;
 }
 
 .ai-center{
@@ -130,8 +133,7 @@ aside .box a:hover{
 
 .wrap{
     margin: 0 auto;
-    width: 73rem;
-    padding:1rem;
+    width: 75rem;
 }
 
 .fullw{
@@ -145,7 +147,7 @@ aside .box a:hover{
 }
 
 #main-container{
-    width: 61rem;
+    width: 63rem;
     margin-left: 1rem;
     display: flex;
     flex-direction: column;
